feat: :sparkles: html do header e searchbar

--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+    <div id="app">
+        <header>
+            <h1>Github Favorites</h1>
+            <div>
+                <label for="searchbar">Usuário do Github</label>
+                <input id="searchbar" type="text" placeholder="Usuário do Github">
+                <button>&plus;</button>
+            </div>
+        </header>
+
+        <table>
+            
+        </table>
+    </div>
 </body>
 </html>
