--- a/index.html
+++ b/index.html
@@ -19,7 +19,42 @@
         </header>
 
         <table>
-            
+            <thead>
+                <tr>
+                    <th>Usuário</th>
+                    <th>Repositórios</th>
+                    <th>Seguidores</th>
+                    <th></th>
+                </tr>
+            </thead>
+
+            <tbody>
+                <tr>
+                    <td class="user">
+                        <img src="https://github.com/nop-dev.png" alt="Imagem de Nop-Dev">
+                        <a href="https://github.com/nop-dev" target="_blank">
+                            <p>Yuri Sousa</p>
+                            <span>Nop-Dev</span>
+                        </a>
+                    </td>
+                    <td class="repositories">33</td>
+                    <td class="followers">10</td>
+                    <td>&times;</td>
+                </tr>
+
+                <tr>
+                    <td class="user">
+                        <img src="https://github.com/maykbrito.png" alt="Imagem de Mayk Brito">
+                        <a href="https://github.com/maykbrito" target="blank">
+                            <p>Mayk Brito</p>
+                            <span>maykbrito</span>
+                        </a>
+                    </td>
+                    <td class="repositories">121</td>
+                    <td class="followers">15.3k</td>
+                    <td>&times;</td>
+                </tr>
+            </tbody>
         </table>
     </div>
 </body>
