feat: :lipstick: estilo do header

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header>
             <h1>Github Favorites</h1>
             <div>
-                <label for="searchbar">Usuário do Github</label>
+                <label class="sr-only" for="searchbar">Usuário do Github</label>
                 <input id="searchbar" type="text" placeholder="Usuário do Github">
                 <button>&plus;</button>
             </div>
