--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Github Favorites</title>
 
     <link rel="stylesheet" href="./css/style.css">
+    <script type="module" src="./js/main.js" defer></script>
 </head>
 <body>
     <div id="app">
