feat: :sparkles: função assíncrona pra buscar os dados do User

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div id="search">
                 <label class="sr-only" for="searchbar">Usuário do Github</label>
                 <input id="searchbar" type="text" placeholder="Usuário do Github">
-                <button>&plus;</button>
+                <button id="searchbtn">&plus;</button>
             </div>
         </header>
 
